# ibis

./: .gitignore  LICENSE.txt  Makefile  README.md  pyproject.toml
plugin/binja/: __init__.py  plugin.json  view.py
plugin/ida/: ibis.py
src/ibis/: analyzer.py  cli.py  context.py  driver.py  layout.py  plugins.py
test/: common.py  test_analyze_essential.py  test_analyze_gauntlet.py  test_context.py  test_driver.py  test_essential.py  test_layout.py
util/: coverage.py  downloader.py  name.py  plot.py  renamer.py
