[project]
name = "ibis"
version = "1.2.1"
description = "Library and plugins for mapping 64-bit iBoot-like binaries"
readme = "README.md"
authors = [
    { name = "Jon Palmisciano", email = "jp@jonpalmisc.com" }
]
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.5",
]

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"

[project.scripts]
ibis = "ibis.cli:main"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "B", "UP", "Q", "PIE", "SIM", "PERF", "FURB", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["test"]
addopts = ["-v", "--cov=src/ibis"]
log_cli_level = "DEBUG"
